🐛 Generator name wrap fixed.

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -154,11 +154,14 @@ body .femto-app .femto-section .femto-container .femto-generator .femto-name {
   position: absolute;
   top: 50%;
   left: 50%;
+  width: 90%;
+  text-align: center;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   color: white;
   font-size: 6rem;
   text-transform: uppercase;
+  word-break: break-all;
 }
 
 @media (max-width: 768px) {
